--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -3,7 +3,6 @@
     box-shadow: 0 2px 6px 0 #0d1a2626;
     padding: 20px 50px;
     text-align: center;
-    /*width: 102%;*/
 }
 
 .header-nav {
@@ -150,6 +149,9 @@
 }
 
 @media screen and (max-width: 768px) {
+    .logo {
+        padding-top: 2vh;
+    }
     .header-nav, .headerRight {
         flex-direction: row;
         justify-content: center;
@@ -173,38 +175,21 @@
         padding: 0;
     }
 
-    .App, .header-top {
+    .App, .header-nav {
         position: sticky;
         top: 0;
         z-index: 1000;
         background: white;
         width: 100%;
-        padding-top: 10px;
     }
 
-    .header-top {
+    .header-nav {
         box-shadow: 0 2px 0 0 #0d1a2626;
-    }
-
-    .header-top.active {
-        height: 90vh;
-    }
-
-    .header-top.active.no-scroll {
-        overflow: hidden;
-    }
-
-    .header-bottom {
-        display: none;
+        width: auto;
     }
 
     .headerRight {
-        display: flex;
-        justify-content: center;
-        justify-items: center;
-        align-content: center;
-        margin: 0 70px 0 auto;
-        height: auto;
+        display: none;
     }
 
     .bar-container {
@@ -215,81 +200,51 @@
         padding: 10px 20px;
     }
 
+    .SearchBarContainer.inactive {
+        display: none;
+    }
+
+    .Search-bar.inactive {
+        display: none;
+    }
+
     .Search-bar.active {
+        display: block;
+        overflow: hidden;
+    }
+
+    .SearchBarContainer.active {
         align-content: center;
-        margin: 4vh 0 0 4vw;
+        margin: 4vh 0 31vh 4vw;
     }
 
 }
 
-/*@media screen and (max-width: 768px) {*/
-/*    .app-header {*/
-/*        padding: 0;*/
-/*    }*/
-/*    .header-nav {*/
-/*        display: flex;*/
-/*        flex-wrap: nowrap;*/
-/*        justify-content: center;*/
-/*    }*/
-
-/*    .bar-container {*/
-/*        display: flex;*/
-/*        flex-direction: column;*/
-/*        justify-content: center;*/
-/*        align-items: center;*/
-/*        padding: 10px 20px;*/
-/*    }*/
-
-/*    .Search-bar.active {*/
-/*        align-content: center;*/
-/*    }*/
-
-/*    .header-bottom {*/
-/*        display: none;*/
-/*    }*/
-
-/*    .header-top.active {*/
-/*        height: 90vh;*/
-/*    }*/
-
-/*}*/
-
-/*@media screen and (max-width: 1000px){*/
-/*    .header-nav {*/
-/*        display: contents;*/
-/*    }*/
-/*    !*.header-bottom {*!*/
-/*    !*    display: none;*!*/
-/*    !*}*!*/
-/*}*/
-
-/*@media screen and (max-width: 1200px) {*/
-/*    .app-header {*/
-/*        padding-left: 0%;*/
-/*    }*/
-/*    .header-nav {*/
-/*        display: flex;*/
-/*        flex-direction: row;*/
-/*        flex-wrap: nowrap;*/
-/*    }*/
-
-/*    .header-top {*/
-/*        display: flex;*/
-/*        flex-direction: row;*/
-/*        justify-content: center;*/
-/*        align-items: center;*/
-/*        padding: 10px 20px;*/
-/*    }*/
-
-/*    .logo {*/
-/*        margin-right: 3vw;*/
-/*    }*/
-
-/*    .personalMenuDropdownContent.show {*/
-/*        margin-top: 2vh;*/
-/*    }*/
-
-/*}*/
+@media screen and (min-width: 769px) and (max-width: 1024px){
+    .header-nav {
+        flex-wrap: nowrap;
+    }
+    .App, .header-nav {
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        background: white;
+        width: 100%;
+    }
+    .logo {
+        margin: 0 1vw 0 -4vw;
+    }
+    .headerRight {
+        margin-left: 3vw;
+    }
+    .headerButtons.headerHostButton {
+        margin-left: -15%;
+        font-size: 13px;
+    }
+    .personalMenu {
+        margin-left: -15%;
+    }
+}
 
 /* Footer styles */
 .main-footer {
