--- a/web/src/components/landingpage/landing.module.css
+++ b/web/src/components/landingpage/landing.module.css
@@ -287,6 +287,33 @@
     width: 75%;
    
 }
+.checkList {
+    margin: 5% 0 5% 0;
+    display: flex;
+    flex-direction: column;
+    h1 {
+        font-size: 4rem;
+        margin: 0;
+        padding: 0;
+    }
+    .subText {
+        font-size: 1.5rem;
+        margin-top: 0;
+    }
+    .checkListItems {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin: 0 20% 0 20%;
+        .checkListItem {
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+            span {
+                max-width: 15vw;
+            }
+        }
+    }
+}
 .cardFirstHalf, .cardSecondHalf {
 
 }
