Small adjustments for styling

--- a/web/src/components/landingpage/landing.module.css
+++ b/web/src/components/landingpage/landing.module.css
@@ -162,12 +162,16 @@
     button {
         align-self: start;
     }
+    h1 {
+        font-size: 2.5rem;
+    }
+    p {
+        color: black;
+        font-size: 1.5rem;
+    }
 }
 .MainText h1, .MainText p{
     text-align: left;
-}
-.MainText h1 {
-    font-size: 40px;
 }
 .highlightText{
     color: #003366;
@@ -217,6 +221,12 @@
     width: 50%;
     margin-left: 10%;
     text-align: left;
+    h1 {
+        font-size: 2rem;
+    }
+    p {
+        color: black;
+    }
 }
 .whyHostText p{
     width: 85%;
@@ -224,6 +234,7 @@
 }
 .simpleSafe{
     background-color: #f9f9f9;
+    padding: 5% 0;
 }
 .Cards {
     display: flex;
@@ -282,7 +293,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    p {
+        color: black;
+    }
 }
 .SimpleSafeAllCards{
     display: flex;
