--- a/web/src/components/landingpage/landing.module.css
+++ b/web/src/components/landingpage/landing.module.css
@@ -393,6 +393,11 @@
             width: auto;
         }
     }
+    img {
+        width: auto;
+        height: auto;
+        object-fit: cover;
+    }
 }
 .cardFirstHalf, .cardSecondHalf {
 
@@ -478,8 +483,145 @@
         width: 100%;
     }
 
-    .MainText h1, .WhyHow_text h1 {
-        font-size: 1.4rem;
+    .firstSection {
+        display: flex;
+        flex-direction: column-reverse;
+        .MainText {
+            width: 80vw;
+            margin: 0;
+            padding: 5%;
+            backdrop-filter: blur(0.25rem);
+            border-radius: 1.5rem;
+            background: rgba(0, 0, 0, 0.383);
+            h1 {
+                font-size: 1.5rem;
+                margin: 0;
+                padding: 0;
+                color: white;
+            }
+            p {
+                font-size: 1rem;
+                color: white;
+
+            }
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        .firstPicture img {
+            border-radius: 0;
+            width: 100vw;
+            object-fit: contain;
+        }
+    }
+    .easyHosting {
+        .easyHosting_text {
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
+        .threeSteps {
+            flex-direction: column;
+            .steps {
+                width: auto;
+                margin: 0 5%;
+            }
+        }
+    }
+    .whyHost {
+        flex-direction: column;
+        .SecPicture img {
+            border-radius: 0;
+            width: 100vw;
+            object-fit: contain;
+        }
+        .whyHostText {
+            h1 {
+                width: 80vw;
+            }
+
+            p {
+                width: 80vw;
+            }
+        }
+    }
+    .simpleSafe {
+        .SimpleSafeAllCards {
+            flex-direction: column;
+            .simpleSafeCards {
+                margin-bottom: 2%;
+                img {
+                    width: 10vw;
+                    height: auto;
+                    max-width: none;
+                    align-self: start;
+                }
+            }
+            .safeMiniText {
+                h3 {
+                    margin: 0;
+                }
+            }
+        }
+    }
+    .checkList {
+        h1 {
+            font-size: 1.5rem;
+        }
+        .subText {
+            font-size: 0.8rem;
+        }
+        .checkListItems {
+            display: flex;
+            flex-direction: column;
+            margin: 0 5%;
+            .checkListItem {
+                width: 80vw;
+                .checkListItem__text {
+                    max-width: none;
+                }
+            }
+        }
+    }
+    .faq {
+        .faq__header {
+            img {
+                max-width: none;
+                width: auto;
+            }
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
+        .landing__faq {
+            width: 80vw;
+        }
+    }
+    .personal__advice {
+        display: flex;
+        flex-direction: column;
+        .personal__advice__left {
+            position: absolute;
+            padding: 0.5rem;
+            backdrop-filter: blur(0.25rem);
+            background: rgba(0, 0, 0, 0.383);
+            width: 80%;
+            height: auto;
+            left: 50%;
+            transform: translateX(-50%);
+            margin: 0;
+            border-radius: 0 0 2rem 2rem;
+            color: white;
+            h1 {
+                font-size: 1.75rem;
+            }
+            h3 {
+                font-size: 0.75rem;
+            }
+        }
+        img {
+
+        }
     }
 
     /* .infoCard img {
