--- a/web/src/components/booking/listing.css
+++ b/web/src/components/booking/listing.css
@@ -23,6 +23,37 @@
   flex-direction: column;
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 600px;
+  position: relative;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
 
 
 .popup {
@@ -61,12 +92,6 @@
   text-align: right;
 }
 
-.closeButton {
-  border: none;
-  color: black;
-  cursor: pointer;
-
-}
 
 
 .dates {
@@ -260,38 +285,33 @@
 .details {
   margin-bottom: 5px;
   color: black;
+  font-size: medium;
 }
 
 .price {
   color: var(--primary-color);
 }
 
-.extraDetails {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 10px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.placeName{
+  font-size: xx-large;
+  color: black;
+  margin:0;
+
 }
 
-.details {
-  margin: 0;
-  padding: 10px;
-  font-size: 18px;
-  color: #333;
-  background-color: #ffffff;
-  border-radius: 5px;
-  text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
+.divider {
+  border: none;
+  border-top: 2px solid #ddd;
+  width: 100%;
+  margin: 20px 0;
 }
-
-.details:hover {
-  transform: scale(1.05);
+.showMore{
+  background-color: white;
+  text-decoration: underline;
+  margin-top: 1rem;
+}
+.showMore:hover{
+  color: var(--primary-color);
 }
 
 /* Stijl voor de beschrijving */
@@ -362,25 +382,12 @@
   color: #555;
 }
 
-/* Stijl voor de knop */
-.backButton {
-  background-color: var(--primary-color);
-  border: none;
-  color: white;
-  padding: 12px 24px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-top: 20px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+.backButton{
+  text-decoration: underline;
 }
 
-/* Stijl voor hover effect op de knop */
-.button:hover {
-  background-color: #45a049;
+.backButton:hover{
+  color: var(--primary-color);
 }
 
 .disclaimer {
