--- a/web/src/components/about/howitworksrework.css
+++ b/web/src/components/about/howitworksrework.css
@@ -1,14 +1,19 @@
 .howitworks__main {
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
   flex-direction: column;
 }
 
 .howitworks__title {
   font-size: 2.25rem;
-  margin: 0rem;
+  margin: 1rem;
 }
 
 .howitworks__subtitle {
@@ -16,21 +21,25 @@
   margin: 0rem;
 }
 
-.howitworks__titles-container {
-  width: 100%;
-  gap: 1.375rem;
-  height: 10rem;
+.howitworks__titles-container,
+.howitworks__section-title-container {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 3rem;
   margin-top: 3rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  text-align: center;
 }
 
 .howitworks__section-title-container {
-  width: 84.12rem;
+  /* width: 90%; */
+  /* width: 84.12rem; */
   margin-top: 1.4rem;
-  display: flex;
   margin-bottom: 0.6rem;
 }
 
@@ -41,12 +50,12 @@
 }
 
 .howitworks__info-block {
-  width: 84.12rem;
   border-radius: 0.4rem;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2rem;
   gap: 2rem;
 }
 
@@ -60,12 +69,20 @@
 }
 
 .howitworks__info-item {
-  width: 23.8rem;
+  width: 22.9em;
   margin-top: 1rem;
   margin-bottom: 1rem;
   height: 14rem;
   display: flex;
   flex-direction: column;
+}
+
+.howitworks__info-item {
+  transition: transform 0.3s;
+}
+
+.howitworks__info-item:hover {
+  transform: scale(1.01);
 }
 
 .borderleft {
@@ -75,6 +92,8 @@
 
 .borderright {
   border-right: 0.2rem solid white;
+  padding-right: 1rem;
+  padding-left: 2rem;
 }
 
 .howitworks__info-header {
@@ -100,44 +119,124 @@
   max-width: 19rem;
 }
 
-@media (max-width: 1364px) {
+@media (max-width: 1292px) {
+  .howitworks__info-title {
+    padding-right: 1.5rem;
+  }
+
+  .howitworks__info-block {
+    width: auto;
+  }
+
+  .howitworks__info-header {
+    height: 3rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
+    gap: 0rem;
+    margin-bottom: 1rem;
+  }
+
+  .howitworks__info-item {
+    width: 28%;
+  }
+
+  .howitworks__info-title {
+    font-size: 1.25em;
+  }
+
   .howitworks__main {
     padding-left: 1rem;
   }
-  .howitworks__info-block {
-    width: 100%;
-  }
+
   .howitworks__section-title-container {
-    width: 100%;
+    width: 80%;
     align-items: center;
     justify-content: center;
     margin-bottom: 1.1rem;
   }
 }
 
-@media (max-width: 1238px) {
-  .howitworks__main {
-    padding-left: 1rem;
-    padding-right: 1rem;
+@media (max-width: 1090px) {
+  .howitworks__info-header {
+    margin-bottom: 0.5rem;
   }
-  .borderleft {
-    border-left: 0.0rem solid white;
-    border-top: 0.2rem solid white;
-    padding-left: 2rem;
+
+  .howitworks__info-block {
+    /* width: 90%; */
+    width: auto;
   }
-  .borderright {
-    border-right: 0.2rem solid white;
+
+  .howitworks__info-title {
+    padding-right: 0.5rem;
+  }
+
+  .howitworks__info-item {
+    width: 26%;
   }
 }
 
-@media (max-width: 796px) {
-  .borderright {
-    border-right: 0.0rem solid white;
-    border-bottom: 0.2rem solid white;
-    padding-left: 0rem;
-    padding-bottom: 2rem;
+@media (max-width: 975px) {
+  .howitworks__info-block {
+    width: 95%;
   }
+}
+
+@media (max-width: 840px) {
+  .howitworks__info-block.howitworks__info-block--guests {
+    background-color: transparent;
+    gap: 0rem;
+  }
+
+  .howitworks__info-block.howitworks__info-block--hosts {
+    background-color: transparent;
+    gap: 0rem;
+  }
+
+  .howitworks__info-title {
+    padding-right: 1.5rem;
+  }
+
+  .howitworks__info-header {
+    display: flex;
+    justify-content: center;
+  }
+
+  .howitworks__info-block.howitworks__info-block--guests>.howitworks__info-item {
+    background: var(--primary-color);
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    height: 14rem;
+    width: 25rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .howitworks__info-block.howitworks__info-block--hosts>.howitworks__info-item {
+    background-color: #052C5A;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    height: 14rem;
+    width: 25rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .howitworks__info-item {
+    width: 30%;
+  }
+
+  .borderright {
+    border-right: 0.0rem;
+    padding: 0;
+  }
+
   .borderleft {
-    padding-top: 2rem;
+    border-left: 0.0rem solid white;
+    padding: 0;
   }
 }
