--- a/web/src/components/booking/bookingoverview.css
+++ b/web/src/components/booking/bookingoverview.css
@@ -1,5 +1,6 @@
 .Bookingcontainer {
-    padding: 20px;
+    padding: 5rem 2rem;
+    height: 100%;
     margin: 20px auto;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
