--- a/web/src/components/hostdashboard/HostReports.css
+++ b/web/src/components/hostdashboard/HostReports.css
@@ -2,12 +2,12 @@
     padding: 20px !important;
 }
 
-h2 {
+/* h2 {
     color: #333 !important;
     margin-bottom: 20px !important;
     font-size: 24px !important;
     text-align: center !important;
-}
+} */
 
 .dashboard {
     display: flex !important;
