Fixed url issue with some jobs + added fallback. And styling fixes on job detail pages. Not responsive yet!

--- a/web/src/components/careers/careers.css
+++ b/web/src/components/careers/careers.css
@@ -76,8 +76,9 @@
 .apply-button {
     background-color: var(--primary-color);
     color: white;
+    margin: 10px auto;
     border: none;
-    padding: 10px 20px;
+    padding: 10px 50px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
