--- a/web/src/components/about/about.css
+++ b/web/src/components/about/about.css
@@ -10,13 +10,14 @@
 .about__subtitle-container h3 {
     font-family: 'Kanit', sans-serif;
     font-weight: 400;
+    font-size: 1.25em;
+    margin: 0.5em 0;
 }
 
-.about__fact-subtitle{
+.about__fact-subtitle {
     margin: 0;
-  font-size: 22px;
-  font-size: clamp(0.8rem, 1.2vw + 0.8rem, 1.5rem);
-  color: white;
+    font-size: clamp(0.8rem, 1.2vw + 0.8rem, 1.5rem);
+    color: white;
 }
 
 .about__factsbox {
@@ -32,6 +33,15 @@
     align-items: flex-start;
 }
 
+.highlightH2 {
+    font-size: 1.40em;
+}
+
+.highlightText {
+    color: #003366;
+    font-style: oblique;
+}
+
 .about__fact {
     display: flex;
     flex-direction: column;
@@ -45,6 +55,15 @@
     position: relative;
 }
 
+.about__text-container {
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    max-width: 1440px;
+}
+
 .about__text {
     font-size: 1.25rem;
     color: black;
@@ -53,6 +72,10 @@
 
 .about__who-we-are-title {
     text-align: left;
+}
+
+.about__who-we-are-title--margintop {
+    margin-top: 2rem;
 }
 
 .about__who-we-are-subtitle--marginbottom {
@@ -70,7 +93,7 @@
 
 .about__fact-title {
     margin: 0;
-    font-size: clamp(0.8rem, 1.2vw + 0.8rem, 1.5rem);    
+    font-size: clamp(0.8rem, 1.2vw + 0.8rem, 2rem);
     color: white;
 }
 
@@ -79,8 +102,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    min-height: 30px; 
-    margin-top: 10px; 
+    min-height: 30px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
@@ -106,7 +129,7 @@
     margin-bottom: 20px;
 }
 
-.about__member > p:nth-of-type(1) {
+.about__member>p:nth-of-type(1) {
     color: var(--primary-color);
 }
 
@@ -141,28 +164,76 @@
     margin-right: 50px;
 }
 
+@media (max-width: 1440px) {
+
+    .about__text-container,
+    .about__subtitle-container,
+    .about__title-container {
+        max-width: 1280px;
+    }
+}
+
 @media (max-width: 850px) {
+
     .about__member {
         width: 100%;
     }
+
     .about__factsbox {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
     .about__fact {
-        width: 100%;
+        width: 90%;
     }
+
     .about__fact-header {
         flex-direction: column-reverse;
     }
+
     .about__footer {
         flex-direction: column;
     }
+
     .about__footer p:first-child {
         margin: 0 0 25px 0;
     }
+
     .about__footer p {
         width: 100%;
+    }
+
+    .about__fact-subtitle {
+        text-align: center;
+    }
+
+    .about__fact-text {
+        text-align: center;
+    }
+}
+
+@media (max-width: 600px) {
+    .about__title-container {
+        display: block;
+        text-align: center;
+    }
+
+    .about__subtitle-container {
+        text-align: center;
+    }
+
+    .about__text {
+        text-align: center;
+
+    }
+
+    .about__text--margintop {
+        margin-top: 1.5rem;
+    }
+
+    .about__footer {
+        text-align: center;
     }
 }
